added routes & navbar

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="./Modern-sneaker-illustration-with-pop-color-on-transparent-background-PNG.png"
-    />
+    <link rel="icon" href="./logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sneaker Store/</title>
+    <title>Sneaker Store</title>
   </head>
   <body>
     <div id="root"></div>
